--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <form
       id="feedbackForm"
-      class="max-w-[90%] sm:max-w-[1100px] rounded-[31px] w-full border-2 border-black"
+      class="max-w-[90%] sm:max-w-[1100px] rounded-[31px] w-full border-2 border-black border-b-none"
     >
       <div
         class="bg-black text-white text-xl sm:text-3xl text-center font-[500] rounded-[29px] py-6"
@@ -339,22 +339,7 @@
           >
         </div>
 
-        <div class="w-full flex flex-col gap-8">
-          <label for="improvementSuggestions" class="block mb-2 font-medium">
-            <h2 class="fontH2">
-              Considering your overall experience with our agency, what
-              suggestions do you have for areas of improvement?
-            </h2></label
-          >
-          <textarea
-            id="improvementSuggestions"
-            name="improvementSuggestions"
-            class="w-full border-[1px] bg-[#F8FAFC] border-black rounded-[4px] px-4 py-2"
-            rows="4"
-            placeholder="Write your breif Here (Optional)"
-            style="resize: vertical"
-          ></textarea>
-        </div>
+         
 
         <div class="w-full flex flex-col gap-8">
           <label for="improvementSuggestions" class="block mb-2 font-medium">
